Renomeia loja e atualiza documentação
