# backend/src/routes.js
@@ -1,12 +1,8 @@
-import usersRoutes from './modules/users/routes';
-import productsRoutes from './modules/products/routes';
 import produtosRoutes from './modules/produtos/routes';
 import usuariosRoutes from './modules/usuarios/routes';
 import comprasRoutes from './modules/compras/routes';
 
 export default [
-    usersRoutes,
-    productsRoutes,
     produtosRoutes,
     usuariosRoutes,
     comprasRoutes
